chore: Remove jakarta and jpa from domain